tests/parser/octave_cells/afun2.m.out
In afun2.m, line 3
|     a = {1, @sin, 2, @cos};
|             ^ error: expected IDENTIFIER, found AT instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
